* Change sign of amounts for credit note invoices
* Add relation between AEAT 340 record and invoice lines
* Fix record amount computation and fill equivalence tax fields
* Set AEAT 340 fields to account_es and account_es_pyme tax templates
* Set values to invoice_number, record_number, issued_invoice_count and
  record_count and add suport for operation key B
* Create report lines ordered by issue date
* Don't encode data if it isn't unicode object
* Avoid string values in fiscalyear code

Version 3.4.0 - 2014-11-03

Version 3.2.0 - 2014-05-22

Version 3.0.0 - 2013-10-25
* Initial release